@@ -284,8 +284,6 @@ def rpred(network, im, bounds, pad=16, line_normalization=True, bidi_reordering=
         # calculate recognized LSTM locations of characters
         scale = len(raw_line.T)/(len(network.outputs)-2 * pad)
         result = network.translate_back_locations(network.outputs)
-        # ugly workaround for different output of translate_back and translate_back_locations 
-        pred = "".join(network.codec.decode([x[0] for x in result]))
         pos = []
         conf = []
 
